# Neko-TUI

./: LICENSE  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
neko-tui/scraping/: jkanime.py
neko_tui/providers/: jkanime.py
